chore: 配置开发环境

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "incremental": true,
+    "watch": true,
     "target": "es2017",
     "outDir": "build/main",
     "rootDir": "src",
