--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "keywords": [],
   "scripts": {
+    "dev": "eslint src & ts-node-dev -P tsconfig.json ./src/index.ts",
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
@@ -43,11 +44,13 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "@types/koa": "^2.13.4",
     "koa": "^2.13.3"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "ava": "^3.12.1",
@@ -66,8 +69,9 @@
     "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.1.8",
     "typedoc": "^0.19.0",
-    "typescript": "4.0.2"
+    "typescript": "^4.0.2"
   },
   "files": [
     "build/main",
