--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "@types/koa": "^2.13.4",
-    "koa": "^2.13.3"
+    "koa": "^2.13.3",
+    "koa-body": "^4.2.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
