--- a/package.json
+++ b/package.json
@@ -45,8 +45,13 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa-router": "^7.4.4",
+    "@types/koa2-cors": "^2.0.2",
+    "axios": "^0.23.0",
     "koa": "^2.13.3",
-    "koa-body": "^4.2.0"
+    "koa-body": "^4.2.0",
+    "qs": "^6.10.1"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
