--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.23.0",
     "koa": "^2.13.3",
     "koa-body": "^4.2.0",
+    "puppeteer": "^12.0.0",
     "qs": "^6.10.1"
   },
   "devDependencies": {
