--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/koa-router": "^7.4.4",
     "@types/koa2-cors": "^2.0.2",
     "axios": "^0.23.0",
+    "canvas": "^2.8.0",
     "koa": "^2.13.3",
     "koa-body": "^4.2.0",
     "koa-router": "^10.1.1",
