--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "koa-router": "^10.1.1",
     "moment": "^2.29.1",
     "puppeteer": "^12.0.0",
-    "qs": "^6.10.1"
+    "qs": "^6.10.1",
+    "solarlunar": "^2.0.7"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
