--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,7 @@
     "types": ["node"],
     "typeRoots": ["node_modules/@types", "src/types"]
   },
-  "include": ["src/**/*.ts", "src/outputs/ePaper/libs.ts"],
+  "include": ["src/**/*.ts", "src/outputs/ePaper/libs.ts", "@types/solarlunar.d.ts"],
   "exclude": ["node_modules/**"],
   "compileOnSave": false
 }
